# llvm-debloat-pass

./: .gitignore  CMakeLists.txt  build.sh  run.sh
dp-pass/: CMakeLists.txt  DebloatPass.cpp  new-pm.cpp
test/: input_for_hello.ll
